--- a/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
+++ b/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
@@ -81,9 +81,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calculator.cs" />
+    <Compile Include="DefaultCalculator.cs" />
     <Compile Include="MessageGenerator.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="some_namespace\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
