--- a/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
+++ b/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
@@ -85,6 +85,7 @@
     <Compile Include="DefaultCalculator.cs" />
     <Compile Include="MessageGenerator.cs" />
     <Compile Include="web\aspnet\BasicHandler.cs" />
+    <Compile Include="web\DefaultRequestCommand.cs" />
     <Compile Include="web\MissingRequestCommandFactory.cs" />
     <Compile Include="web\CommandRegistry.cs" />
     <Compile Include="web\DefaultCommandRegistry.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="web\Request.cs" />
     <Compile Include="web\RequestCommand.cs" />
     <Compile Include="web\RequestFactory.cs" />
+    <Compile Include="web\RequestMatch.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
