last checkin of day 2

--- a/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
+++ b/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
@@ -84,17 +84,28 @@
     <Compile Include="Calculator.cs" />
     <Compile Include="DefaultCalculator.cs" />
     <Compile Include="MessageGenerator.cs" />
-    <Compile Include="web\aspnet\BasicHandler.cs" />
-    <Compile Include="web\DefaultRequestCommand.cs" />
-    <Compile Include="web\MissingRequestCommandFactory.cs" />
-    <Compile Include="web\CommandRegistry.cs" />
-    <Compile Include="web\DefaultCommandRegistry.cs" />
-    <Compile Include="web\DefaultFrontController.cs" />
-    <Compile Include="web\FrontController.cs" />
-    <Compile Include="web\Request.cs" />
-    <Compile Include="web\RequestCommand.cs" />
-    <Compile Include="web\RequestFactory.cs" />
-    <Compile Include="web\RequestMatch.cs" />
+    <Compile Include="tasks\StoreCatalog.cs" />
+    <Compile Include="tasks\stubs\StubStoreCatalog.cs" />
+    <Compile Include="utility\Stub .cs" />
+    <Compile Include="web\application\catalogbrowsing\ViewTheMainDepartmentsInTheStore.cs" />
+    <Compile Include="web\application\model\Department.cs" />
+    <Compile Include="web\core\ApplicationBehaviour .cs" />
+    <Compile Include="web\core\aspnet\BasicHandler.cs" />
+    <Compile Include="web\core\DefaultRequestCommand.cs" />
+    <Compile Include="web\core\MissingRequestCommandFactory.cs" />
+    <Compile Include="web\core\CommandRegistry.cs" />
+    <Compile Include="web\core\DefaultCommandRegistry.cs" />
+    <Compile Include="web\core\DefaultFrontController.cs" />
+    <Compile Include="web\core\FrontController.cs" />
+    <Compile Include="web\core\Request.cs" />
+    <Compile Include="web\core\RequestCommand.cs" />
+    <Compile Include="web\core\RequestFactory.cs" />
+    <Compile Include="web\core\RequestMatch.cs" />
+    <Compile Include="web\core\ResponseEngine.cs" />
+    <Compile Include="web\core\stubs\StubRequestFactory.cs" />
+    <Compile Include="web\core\stubs\StubResponseEngine.cs" />
+    <Compile Include="web\core\stubs\StubSetOfCommands.cs" />
+    <Compile Include="web\core\stubs\StubSpecialCaseFactory.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
