Pushing new changes

--- a/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
+++ b/product/nothinbutdotnetstore/nothinbutdotnetstore.csproj
@@ -89,7 +89,9 @@
     <Compile Include="utility\Stub .cs" />
     <Compile Include="web\application\catalogbrowsing\ViewTheDepartmentsInADepartment.cs" />
     <Compile Include="web\application\catalogbrowsing\ViewTheMainDepartmentsInTheStore.cs" />
+    <Compile Include="web\application\catalogbrowsing\ViewTheProductsIntheDepartment.cs" />
     <Compile Include="web\application\model\Department.cs" />
+    <Compile Include="web\application\model\Product.cs" />
     <Compile Include="web\core\ApplicationBehaviour .cs" />
     <Compile Include="web\core\aspnet\BasicHandler.cs" />
     <Compile Include="web\core\DefaultRequestCommand.cs" />
