Pushing new changes

--- a/product/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
+++ b/product/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
@@ -110,6 +110,7 @@
     <Compile Include="BasicHandlerSpecs.cs" />
     <Compile Include="CalculatorSpecs.cs" />
     <Compile Include="CommandRegistrySpecs.cs" />
+    <Compile Include="UrlSpecs.cs" />
     <Compile Include="ViewResultsForSpecs.cs" />
     <Compile Include="FrontControllerSpecs.cs" />
     <Compile Include="MessageGeneratorSpecs.cs" />
