Extending the URLBuilder

--- a/product/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
+++ b/product/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
@@ -112,7 +112,9 @@
     <Compile Include="CommandRegistrySpecs.cs" />
     <Compile Include="HandlerViewFactorySpecs.cs" />
     <Compile Include="RequestContainsCommandSpecs.cs" />
+    <Compile Include="spikes\ExpressionTreeSpecs.cs" />
     <Compile Include="UrlSpecs.cs" />
+    <Compile Include="utility\ExpressionUtility.cs" />
     <Compile Include="ViewResultsForSpecs.cs" />
     <Compile Include="FrontControllerSpecs.cs" />
     <Compile Include="MessageGeneratorSpecs.cs" />
