Updating the UrlBuilding process

--- a/product/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
+++ b/product/nothinbutdotnetstore.specs/nothinbutdotnetstore.specs.csproj
@@ -113,7 +113,8 @@
     <Compile Include="HandlerViewFactorySpecs.cs" />
     <Compile Include="RequestContainsCommandSpecs.cs" />
     <Compile Include="spikes\ExpressionTreeSpecs.cs" />
-    <Compile Include="UrlSpecs.cs" />
+    <Compile Include="UrlBuilderSpecs.cs" />
+    <Compile Include="UrlDetailAppenderSpecs.cs" />
     <Compile Include="utility\ExpressionUtility.cs" />
     <Compile Include="ViewResultsForSpecs.cs" />
     <Compile Include="FrontControllerSpecs.cs" />
